# stdash

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
note/: CNN.ipynb
src/stdash/: app.py  cnt_user.py  db.py  page_1.py  req_prd.py
src/stdash/pages/: cnt_time.py  hotdog.py  upload_file.py
